static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Merienda+One&family=Orelega+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');

body {
  background-color: #D3D3D3;
  font-family: 'Oswald', sans-serif;
}

.container {
  width: 100%;
  max-width: none;
}

/* headings */
h1 {
  font-family: 'Merienda One', cursive;
  color: #a62632;
}

h2 {
  font-family: 'Merienda One', cursive;
  color: #a62632;
  font-size: 2.4rem;
}

h4 {
  font-family: 'Merienda One', cursive;
  color: #a62632;
}

h5 {
  font-family: 'Merienda One', cursive;
  color: #a62632;
}

h6 {
  font-family: 'Merienda One', cursive;
  color: #a62632;
}

h1 > span {
  color: #a62632;
}

p {
  padding: 0;
  font-size: 1.2rem;
}

.brand-logo {
  margin-left: 0.5rem;
}

.heading-info {
  padding: 1rem;
  text-align: center;
  background-color: #ffffff;
}

/* recipe cards */
.card-reveal {
  -webkit-transition: all 700ms ease;
  -moz-transition: all 700ms ease;
  -ms-transition: all 700ms ease;
  -o-transition: all 700ms ease;
  transition: all 700ms ease;
}

.cover-card {
  height: auto;
  border-bottom: 2px solid #a62632;
}

.cover-card li {
  font-size: 1.6rem;
}

.card {
  padding: 1rem;
}

.card-panel {
  margin: 0;
}

.card-title > span {
  position: absolute;
  bottom: 0;
  right: 0;
}

.fill-card {
  height: 38rem;
}

/* buttons */
.btn-green {
  background-color: #32a626;
} 

.btn-blue {
  background-color: #2632a6;
}

.btn-red {
  background-color: #a62632;
}

.btn-small, .btn-large {
  margin: 0.2rem;
  border-radius: 12px;
}

/* navigation bar */
nav .nav-wrapper i {
  line-height: 0;
}

.extended {
  background-color: #ffffff;
  font-family: 'Merienda One', cursive;
  overflow: hidden;
}

.extended a {
  color:#a62632;
  font-size: 1.6rem;
}

/* side navigation bar */
.sidenav-trigger {
  color: #a62632;
}

.form-inline {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
}

.input-field {
  width: 60%;
}

.intro-big {
  font-size: 2rem;
}

.intro-med {
  font-size: 1.6rem;
}

.intro-small {
  font-size: 1.2rem;
}

.info {
  font-size: 1.5rem;
  text-align: center;
}

.form-inline {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  margin: 0 0.5rem 0 0.5rem;
}

.flash-message h4 {
  color: #26a69a;
  background-color: #ffffff;
  line-height: 2.5;
  margin: 0;
}

/* faq collaspsible */
.collapsible-header {
  margin: 6px;
  line-height: 1;
  font-size: 1.6rem;
}

.collapsible-body {
  background-color: #ffffff;
  font-size: 1.4rem;
}

.card-recipe {
  min-height: 50rem;
  border-radius: 2px;
  overflow: hidden;
}

.return-card {
  padding: 4rem;
  margin-top: 4rem;
}

/* pagination */
.pagination {
  text-align: center;
}

.pagination li.active {
  background-color: #000000;
}

/* footer */
.base-footer {
  background-color: #ffffff;
  text-align: left;
}

.base-footer a {
  color:#a62632;
  font-size: 1.6rem;
}

.base-footer p {
  font-size: 1.2rem;
}
.footer-style {
  margin-bottom: 0;
}

.dev-links i {
  font-size: 2rem;
  margin: 0.5rem;
}

.forms {
  background-color: #ffffff;
  padding: 1rem;
  margin-top: 1rem;
}

/* recipe card image */
.card-image img.activator {
  height: 35rem;
  -o-object-fit: contain;
     object-fit: contain;
  width: 100% !important;
}

/* shannon hotel supplies */
.shs-image {
  height: 25rem;
  text-align: center;
}
.shs-image img.activator {
  height: 20rem;
  margin: auto;
  padding: 1rem;
}

/* no search results */
.no-result {
  line-height: 3;
  font-size: 2rem;
  color: #26a69a;
  background-color: #ffffff;
  margin: 0;
  padding: 2rem;
  border-bottom: 2px solid #000000;
}

.logo-image {
  height: 30rem;
  -o-object-fit: contain;
     object-fit: contain;
  width: 100% !important;
}

.modal-footer .btn-small {
  float: left;
}

